Add betting functionality and update HTML meta tags for improved SEO.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/quintus.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Primary Meta Tags -->
+        <title>Quintus - Decentralized Peer-to-Peer Prediction Market</title>
+        <meta
+            name="title"
+            content="Quintus - Decentralized Peer-to-Peer Prediction Market"
+        />
+        <meta
+            name="description"
+            content="Decentralized peer-to-peer prediction market."
+        />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://quintus.vercel.app/" />
+        <meta
+            property="og:title"
+            content="Quintus - Decentralized Peer-to-Peer Prediction Market"
+        />
+        <meta
+            property="og:description"
+            content="Decentralized peer-to-peer prediction market."
+        />
+        <meta
+            property="og:image"
+            content="https://quintus.vercel.app/banner.png"
+        />
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://quintus.vercel.app/" />
+        <meta
+            property="twitter:title"
+            content="Quintus - Decentralized Peer-to-Peer Prediction Market"
+        />
+        <meta
+            property="twitter:description"
+            content="Decentralized peer-to-peer prediction market."
+        />
+        <meta
+            property="twitter:image"
+            content="https://quintus.vercel.app/banner.png"
+        />
+
+        <!-- Other meta tags remain the same as in previous suggestion -->
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
