Enhance SEO and social media integration by updating meta tags in index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,48 +7,45 @@
 
         <!-- Primary Meta Tags -->
         <title>Quintus - Decentralized Peer-to-Peer Prediction Market</title>
-        <meta
-            name="title"
-            content="Quintus - Decentralized Peer-to-Peer Prediction Market"
-        />
-        <meta
-            name="description"
-            content="Decentralized peer-to-peer prediction market."
-        />
+        <meta name="title" content="Quintus - Decentralized Peer-to-Peer Prediction Market" />
+        <meta name="description" content="Decentralized peer-to-peer prediction market." />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://quintus.vercel.app/" />
-        <meta
-            property="og:title"
-            content="Quintus - Decentralized Peer-to-Peer Prediction Market"
-        />
-        <meta
-            property="og:description"
-            content="Decentralized peer-to-peer prediction market."
-        />
-        <meta
-            property="og:image"
-            content="https://quintus.vercel.app/banner.png"
-        />
+        <meta property="og:title" content="Quintus - Decentralized Peer-to-Peer Prediction Market" />
+        <meta property="og:description" content="Decentralized peer-to-peer prediction market." />
+        <meta property="og:image" content="https://quintus.vercel.app/banner.png" />
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="1200" />
+        <meta property="og:image:height" content="630" />
+
+        <!-- WhatsApp -->
+        <meta property="og:site_name" content="Quintus">
+        <meta name="og:app_id" content="whatsapp" />
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:domain" content="quintus.vercel.app" />
         <meta property="twitter:url" content="https://quintus.vercel.app/" />
-        <meta
-            property="twitter:title"
-            content="Quintus - Decentralized Peer-to-Peer Prediction Market"
-        />
-        <meta
-            property="twitter:description"
-            content="Decentralized peer-to-peer prediction market."
-        />
-        <meta
-            property="twitter:image"
-            content="https://quintus.vercel.app/banner.png"
-        />
+        <meta property="twitter:title" content="Quintus - Decentralized Peer-to-Peer Prediction Market" />
+        <meta property="twitter:description" content="Decentralized peer-to-peer prediction market." />
+        <meta property="twitter:image" content="https://quintus.vercel.app/banner.png" />
 
-        <!-- Other meta tags remain the same as in previous suggestion -->
+        <!-- LinkedIn -->
+        <meta property='og:site_name' content='Quintus' />
+
+        <!-- Additional Platform Support -->
+        <link rel="apple-touch-icon" href="/quintus.png" />
+        <link rel="canonical" href="https://quintus.vercel.app/" />
+
+        <!-- Standalone App Support -->
+        <meta name="application-name" content="Quintus" />
+        <meta name="apple-mobile-web-app-title" content="Quintus" />
+
+        <!-- Additional Image Metadata for Broader Compatibility -->
+        <link rel="image_src" href="https://quintus.vercel.app/banner.png" />
+        <meta name="msapplication-TileImage" content="https://quintus.vercel.app/banner.png" />
     </head>
     <body>
         <div id="root"></div>
